修复一些小问题

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="https://npm.elemecdn.com/boke-cdn/img/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.zhimg.com/react-nice-resume@1.0.3/css/css2-NotoSerifSC_swap.css">
     <link rel="stylesheet" href="https://unpkg.zhimg.com/react-nice-resume@1.0.3/css/font-awesome.css"/>
-    <link type="text/css" rel="stylesheet" href="http://127.0.0.1:8805/assets/css/argon.min.css"/>
+    <link type="text/css" rel="stylesheet" href="../assets/css/argon.min.css"/>
     <script src="https://npm.elemecdn.com/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://npm.elemecdn.com/bootstrap@3.3.5/dist/js/bootstrap.min.js"></script>
 
