--- a/public/J1/index.html
+++ b/public/J1/index.html
@@ -343,7 +343,8 @@
             { value: 'xvideos', label: 'XVideos', color: '#8b5cf6' },
             { value: 'hsex', label: 'HSEX', color: '#ec4899' },
             { value: 'jabletv', label: 'JableTV', color: '#06b6d4' },
-            { value: 'madoutv', label: 'MadouTV', color: '#10b981' }
+            { value: 'madoutv', label: 'MadouTV', color: '#10b981' },
+            { value: 'spankbang', label: 'SpankBang', color: '#06b6d4' },
         ];
 
         console.log('当前站点:', siteName);
