--- a/public/Zlive/index.html
+++ b/public/Zlive/index.html
@@ -179,5 +179,7 @@
         window.location.assign('/Zlive/lucky');
     }
 </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
