--- a/public/Zlive/lucky/index.html
+++ b/public/Zlive/lucky/index.html
@@ -213,5 +213,7 @@
         })
         .catch(error => console.error('Error fetching data:', error));
 </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
