--- a/public/pdf/index.html
+++ b/public/pdf/index.html
@@ -41,5 +41,7 @@
     // 使用window.open()方法打开PDF文件在外部浏览器中显示
       window.open(pdfUrl);
   </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
