--- a/public/pdf/upload.html
+++ b/public/pdf/upload.html
@@ -111,5 +111,7 @@
       fileReader.readAsArrayBuffer(file);
     }
   </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
