--- a/public/play/index.html
+++ b/public/play/index.html
@@ -418,5 +418,7 @@
         }, 5000);
     }
 </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
