--- a/public/weimi/detail/index.html
+++ b/public/weimi/detail/index.html
@@ -267,5 +267,7 @@
     }
 </script>
 
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
