--- a/public/world/index.html
+++ b/public/world/index.html
@@ -1053,5 +1053,7 @@
         `;
         document.head.appendChild(style);
     </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
