--- a/public/J1/play.html
+++ b/public/J1/play.html
@@ -1321,5 +1321,7 @@
             renderLikes(loadLikes());
         });
     </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
