--- a/public/Slive/index.html
+++ b/public/Slive/index.html
@@ -1089,5 +1089,7 @@ function AES_Decrypt(word) {
     };
 </script>
 
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
