--- a/public/Zlive/douyu/index.html
+++ b/public/Zlive/douyu/index.html
@@ -201,5 +201,7 @@
         console.error('Stream ID not found in the URL');
     }
 </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
