--- a/public/cg/index.html
+++ b/public/cg/index.html
@@ -729,5 +729,7 @@
             startApp();
         });
     </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
