--- a/public/video/index copy.html
+++ b/public/video/index copy.html
@@ -3449,5 +3449,7 @@
         
 
     </script>
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
