--- a/public/weimi/old/index.html
+++ b/public/weimi/old/index.html
@@ -278,5 +278,7 @@
     };
 </script>
 
-</body>
+    <script src="/assets/login-guard.js"></script>
+  <script src="/assets/page-permission.js"></script>
+  </body>
 </html>
